--- a/linux-rt-bfq-dev-git/config
+++ b/linux-rt-bfq-dev-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.11.9 Kernel Configuration
+# Linux/x86 5.11.10 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 10.2.0"
 CONFIG_CC_IS_GCC=y
@@ -382,6 +382,7 @@ CONFIG_ACRN_GUEST=y
 # CONFIG_MEXCAVATOR is not set
 # CONFIG_MZEN is not set
 # CONFIG_MZEN2 is not set
+# CONFIG_MZEN3 is not set
 # CONFIG_MPSC is not set
 # CONFIG_MATOM is not set
 # CONFIG_MCORE2 is not set
@@ -401,8 +402,14 @@ CONFIG_ACRN_GUEST=y
 # CONFIG_MCASCADELAKE is not set
 # CONFIG_MCOOPERLAKE is not set
 # CONFIG_MTIGERLAKE is not set
+# CONFIG_MSAPPHIRERAPIDS is not set
+# CONFIG_MALDERLAKE is not set
 CONFIG_GENERIC_CPU=y
-# CONFIG_MNATIVE is not set
+# CONFIG_GENERIC_CPU2 is not set
+# CONFIG_GENERIC_CPU3 is not set
+# CONFIG_GENERIC_CPU4 is not set
+# CONFIG_MNATIVE_INTEL is not set
+# CONFIG_MNATIVE_AMD is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_TSC=y
